# BigSequencer

./: .gitmodules  CMakeLists.txt  README.md
resource/: bigsequencereditor.uidesc
source/: bigsequencercids.h  bigsequencercontroller.cpp  bigsequencercontroller.h  bigsequencereditor.cpp  bigsequencereditor.h  bigsequencerentry.cpp  bigsequencerprocessor.cpp  bigsequencerprocessor.h  notedatagenerator.h  plugids.h  scales.cpp  scales.h  sequencer.cpp  sequencer.h  sequencerview.cpp  sequencerview.h  util.h  version.h
source/frontend/: mypluginview.cpp  mypluginview.h
